# XML-Social-Network-Analyzer

./: .gitignore  BPE.cpp  CMakeLists.txt  README.md  SimpleMap.h  main.cpp  mainwindow.cpp
Checking consistency/: checking_fix.cpp
Minifying/: minify.cpp
Prettifying/: Prettifying.cpp  Tree.h
XML and tree/: Tree.cpp  Tree.h  main.cpp
XML2JSON_Converter/: Tree.h  converter.cpp  test.cpp
compression_decomBPE/: BPE.h  BPEcompressor.cpp  BPEcompressor.h  main.cpp  output_file.comp  sample2.xml
data/: team_members.txt
installation/: script.iss
src/CLI/: CLICommands.cpp  CLICommands.h  CMakeLists.txt
src/UI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/UI/pages/: AboutPage.cpp  AboutPage.h  AboutPage.ui  CMakeLists.txt  CompressPage.cpp  CompressPage.h  CompressPage.ui  DecompressPage.cpp  DecompressPage.h  DecompressPage.ui  TeamPage.cpp  TeamPage.h  TeamPage.ui  VerificationPage.cpp  VerificationPage.h  VerificationPage.ui  WelcomePage.cpp  WelcomePage.h  WelcomePage.ui  formattingPage.cpp  formattingPage.h  formattingPage.ui  graphPage.cpp  graphPage.h  graphPage.ui  influence_activity.cpp  influence_activity.h  influence_activity_page.ui  json_converter_page.cpp  json_converter_page.h  json_converter_page.ui  minifyingPage.cpp  minifyingPage.h  minifyingPage.ui  postsearch.cpp  postsearch.h  processingpage.cpp  processingpage.h  processingpage.ui  resources.qrc  (+3 more)
src/UI/pages/files/: team_members.txt
src/app/: CLI.cpp  CMakeLists.txt  GUI.cpp  icon.rc  main.cpp
src/core/: BPE.cpp  BPE.h  BPE_Bridge.cpp  BPE_Bridge.h  CMakeLists.txt  Compress.cpp  Compress.h  Decompress.cpp  Decompress.h  FileUtils.cpp  FileUtils.h  Graph.cpp  Graph.h  GraphVisualizer.cpp  GraphVisualizer.h  GraphvizWrapper.h  JsonConverter.cpp  JsonConverter.h  Mutual.cpp  Mutual.h  SearchTopic.cpp  SearchTopic.h  SearchWord.cpp  SearchWord.h  Suggest.cpp  Suggest.h  Tree.h  XMLValidator.cpp  XMLValidator.h  XML_Compress.cpp  XML_Compress.h  XML_Decompress.cpp  XML_Decompress.h  main.cpp
